--- a/piksi_tutorial/package.xml
+++ b/piksi_tutorial/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>swiftnav_piksi</name>
+  <name>piksi_tutorial</name>
   <version>0.0.4</version>
   <description>Swift Navigation Piksi Driver</description>
 
@@ -17,14 +17,8 @@
   <author email="cbjamo@gmail.com">Caleb Jamison</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>diagnostic_updater</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_srvs</build_depend>
-  <build_depend>libsbp</build_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>diagnostic_updater</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>std_srvs</run_depend>
-  <run_depend>libsbp</run_depend>
+  <build_depend>piksi_driver</build_depend>
+  <build_depend>diagnostic_aggregator</build_depend>
+  <run_depend>piksi_driver</run_depend>
+  <run_depend>diagnostic_aggregator</run_depend>
 </package>
