--- a/piksi_driver/package.xml
+++ b/piksi_driver/package.xml
@@ -20,11 +20,13 @@
   <build_depend>roscpp</build_depend>
   <build_depend>diagnostic_updater</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_srvs</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>libsbp</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>diagnostic_updater</run_depend>
   <run_depend>sensor_msgs</run_depend>
-  <run_depend>std_srvs</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>libsbp</run_depend>
 </package>
